#2971 Manage table view